--- a/src/app/components/articles-feature-project/articles-feature-project.component.html
+++ b/src/app/components/articles-feature-project/articles-feature-project.component.html
@@ -2,13 +2,13 @@
     <thead>
       <th>ID</th>
       <th>Name</th>
-      <th># Moons</th>
+      <th></th>
     </thead>
     <tbody>
       <tr *ngFor="let article of articles">
         <td>{{article.id}}</td>
         <td>{{article.name}}</td>
-        <td>{{article.numberOfMoons}}</td>
+        <td>{{article.}}</td>
       </tr>
     </tbody>
   </table>
