--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,10 @@
 
   <app-nav-bar></app-nav-bar>
- 
-
-    
-
-  
-  <h2>Articles</h2>
-  
-
-  
+ <app-home></app-home>
+ <app-articlesFavoritesTips></app-articlesFavoritesTips>
+<app-articlesFeatureProject></app-articlesFeatureProject>
+<app-events></app-events>
+<app-suggestions></app-suggestions>
   
   <div style="text-align:center">
     <h1>
@@ -17,11 +13,5 @@
   </div>
   <hr/>
   
-  
   <footer>
-  
-
-
-
-
 <router-outlet></router-outlet>
