--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -11,16 +11,16 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-            <a class= "nav-link" href="../articlesFavoriteTips/">Favorites & Tips</a>
+            <a class= "nav-link" href="../favorites-tips-articles/">Favorites & Tips</a>
         </li>
         <li class="nav-item">
 
-            <a class= "nav-link" href="../articlesFeatureProject/">Featured Project</a>
+            <a class= "nav-link" href="../featured-project-articles/">Featured Project</a>
         </li>
 
         <li class="nav-item">
 
-            <a class="nav-link" href="../events/">Upcoming Events</a>
+            <a class="nav-link" href="../upcoming-events/">Upcoming Events</a>
         </li>
         <li class="nav-item">
 
