resolved multiple issues
added forms module to solve the bug with ng

removed weird incomplete nav menu that was added to index.html

commented out code for search

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<h1>Article</h1>
+<app-nav-bar></app-nav-bar>
+
+<!-- <h1>Article</h1>
 <h1>Search / Filter example</h1>
 
 <input placeholder="search term" [(ngModel)]="term" />
@@ -8,18 +10,19 @@
 Searching for: {{ term }}
 <hr />
 <ul>
-  <li *ngFor="let word of filteredWords">
-    {{ word }}
-  </li>
+<li *ngFor="let word of filteredWords">
+  {{ word }}
+</li>
 </ul>
 
 <ul>
-  <li *ngFor="let article of articles">{{ article.name }}</li>
+<li *ngFor="let article of articles">{{ article.name }}</li>
 </ul>
 <input [(ngModel)]="newArticle.name" placeholder="name" /><button
-  (click)="addArticle()"
+(click)="addArticle()"
 >
-  Submit
+Submit
 </button>
 
+ -->
 <router-outlet></router-outlet> 
