--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,19 @@
-<div class="container">
+<div class="pb-5 container" *ngFor="let article of article">
     <div class="row justify-content-md-center">
       <div class="col-sm-8 bg-secondary text-white">
-        Title of the Article
+        {{article.Category}}
       </div>
       <div class="col-sm-4 bg-dark text-white">
-        Extra stuff
+        {{article.Date}}
       </div>
     </div>
     <div class="row justify-content-md-center">
         <div class="col-sm bg-light text-dark">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          {{article.Content}}
+        </div>
     </div>
+    <div class="row justify-content-md-center">
+      {{article.Keywords}}
+    </div>
+    
   </div>
