--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -28,7 +28,8 @@
         </li>
 
       </ul>
-      <!-- THIS IS FOR THE SEARCH BAR IF WE WANT IT IN THE FUTURE 
+      <a href="../login/" class="btn btn-info" role="button">Login</a>
+          <!-- THIS IS FOR THE SEARCH BAR IF WE WANT IT IN THE FUTURE 
           <form class="form-inline my-2 my-lg-0"> 
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
