Changed Models/Modules and Updated Components/HTML/.TS/App-module.ts in the Front of application
FrontEnd: Added:
Models/Modules: Favorites
                              Projects
Updated:
Components(TS/HTML): FeaturedProjectsArticlesComponent/FavoritesTipsArticlesComponent,HomeComponent(To show the new models)
App-module.ts file

Deleted: Article from Frontend

--- a/src/app/favorites-tips-articles/favorites-tips-articles.component.html
+++ b/src/app/favorites-tips-articles/favorites-tips-articles.component.html
@@ -1,1 +1,20 @@
-<p>favorites-tips-articles works!</p>
+<div class="pb-5 container" *ngFor="let favorites of favorites">
+    <div class="row justify-content-md-center">
+      <div class="col-sm-8 bg-secondary text-white">
+        {{favorites.Category}}
+      </div>
+      <div class="col-sm-4 bg-dark text-white">
+        {{favorites.Date}}
+      </div>
+    </div>
+    <div class="row justify-content-md-center">
+        <div class="col-sm bg-light text-dark">
+          {{favorites.Content}}
+        </div>
+    </div>
+    <div class="row justify-content-md-center">
+      {{favorites.Keywords}}
+    </div>
+    
+  </div>
+
