--- a/src/app/featured-projects-articles/featured-projects-articles.component.html
+++ b/src/app/featured-projects-articles/featured-projects-articles.component.html
@@ -1,1 +1,20 @@
-<p>featured-projects-articles works!</p>
+<div class="pb-5 container" *ngFor="let projects of projects">
+    <div class="row justify-content-md-center">
+      <div class="col-sm-8 bg-secondary text-white">
+        {{projects.Category}}
+      </div>
+      <div class="col-sm-4 bg-dark text-white">
+        {{projects.Date}}
+      </div>
+    </div>
+    <div class="row justify-content-md-center">
+        <div class="col-sm bg-light text-dark">
+          {{projects.Content}}
+        </div>
+    </div>
+    <div class="row justify-content-md-center">
+      {{projects.Keywords}}
+    </div>
+    
+  </div>
+
