--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,4 +25,8 @@ Submit
 </button>
 
  -->
-<router-outlet></router-outlet> 
+ 
+<div class="jumbotron">
+  <router-outlet></router-outlet>
+</div>
+ 
