--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -22,10 +22,10 @@
 
             <a class="nav-link" href="../upcoming-events/">Upcoming Events</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
 
             <a class="nav-link" href="../suggestions/">Suggestions</a>
-        </li>
+        </li> -->
 
       </ul>
       <a href="../login/" class="btn btn-info" role="button">Login</a>
