--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -61,7 +61,7 @@
             <div class="card mb-4 shadow-sm">
               <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">{{projects.Category}}</text></svg>
               <div class="card-body">
-                <p class="card-text">{{projects.Content}}</p>
+                <p class="card-text"><a href="../featured-projects-articles/"> {{projects.Content}} </a> </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <small class="text-muted"> {{projects.Date}}</small>
                 </div>
@@ -79,7 +79,7 @@
             <div class="card mb-4 shadow-sm">
               <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">{{favorites.Category}}</text></svg>
               <div class="card-body">
-                <p class="card-text">{{favorites.Content}}</p>
+                <p class="card-text"><a href="../favorites-tips-articles/">{{favorites.Content}} </a></p>
                 <div class="d-flex justify-content-between align-items-center">
                   <small class="text-muted"> {{favorites.Date}}</small>
                 </div>
