Register page css & html

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,14 +1,26 @@
-<h3>Register New User</h3>
-<p>
-  <input [(ngModel)]="user.firstName" placeholder="first name" />
-  <br />
-  <input [(ngModel)]="user.lastName" placeholder="last name" />
-  <br />
-  <input [(ngModel)]="user.email" placeholder="email" />
-  <br />
-  <input [(ngModel)]="user.username" placeholder="username" />
-  <br />
-  <input [(ngModel)]="user.password" placeholder="password" />
-  <br />
-  <button (click)="register()">register</button>
-</p>
+<body class="text-center">
+  <form class="form-signin">
+<img class="mb-4" src="../../assets/login.png" alt="" width="72" height="72">
+<h1 class="h3 mb-3 font-weight-normal">Please Register</h1>
+<label for="inputfirstName" class="sr-only">First Name</label>
+<input type="firstName" id="inputfirstName" class="form-control" placeholder="first Name" required autofocus>
+<label for="inputlastName" class="sr-only">Last Name</label>
+<input type="lastName" id="inputlastName" class="form-control" placeholder="last Name" required autofocus>
+<label for="inputuserName" class="sr-only">User Name</label>
+<input type="userName" id="inputuserName" class="form-control" placeholder="user Name" required autofocus>
+<label for="inputEmail" class="sr-only">Email address</label>
+<input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+<label for="inputPassword" class="sr-only">Password</label>
+<input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+<div class="checkbox mb-3">
+  <label>
+    <input type="checkbox" value="remember-me"> Remember me
+  </label>
+</div>
+
+<button class="btn btn-lg btn-secondary btn-block" type="submit">Register</button>
+
+<p class="mt-5 mb-3 text-muted">&copy; 2017-2020</p>
+</form>
+
+</body>
