--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<body class="text-center">
+<!--<body class="text-center">
   <form class="form-signin">
 <img class="mb-4" src="../../assets/login.png" alt="" width="72" height="72">
 <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
@@ -17,4 +17,4 @@
 <p class="mt-5 mb-3 text-muted">&copy; 2017-2020</p>
 </form>
 
-</body>
+</body>-->
