--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -4,7 +4,7 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-  
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto ">
         <li class="nav-item active ">
@@ -28,10 +28,10 @@
         </li> -->
 
       </ul>
-      <a href="../login/" class="btn btn-info" role="button">Login</a>
-      
-          <!-- THIS IS FOR THE SEARCH BAR IF WE WANT IT IN THE FUTURE 
-          <form class="form-inline my-2 my-lg-0"> 
+     <!-- <a href="../login/" class="btn btn-info" role="button">Login</a>
+
+           THIS IS FOR THE SEARCH BAR IF WE WANT IT IN THE FUTURE
+          <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>-->
